--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Авторизация</title>
-<link rel="stylesheet" href="../style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Авторизация</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-<div class="container">
-  <form action="#" class="login-form">
-    <h2>Вход</h2>
-    <div class="form-group">
-      <label for="username">Имя пользователя:</label>
-      <input type="text" id="username" name="username" required>
+    <div class="container">
+        <form action="/login" method="POST" class="login-form">
+            <h2>Вход</h2>
+            <div class="form-group">
+                <label for="username">Имя пользователя:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Пароль:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Войти</button>
+        </form>
     </div>
-    <div class="form-group">
-      <label for="password">Пароль:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Войти</button>
-  </form>
-</div>
 </body>
 </html>
+
